@startuml

class ItemList{
    -int itemListId
    -useDescription
    -int quantity
    -double price
    -int orderId

    +ItemList()
    +getters()
}

class LinkItemListMaterialVariants {
    -int itemListId
    -int materialVariantsId

    +LinkItemListMaterialVariants()
    +getters()
}

class Material {
    -int materialId
    -String descriptions
    -String unit
    -double unitPrice
    -String type

    +Materials()
    +getters()

}

class MaterialVariants {
    -int variantId
    -double length
    -int quantity
    -int materialId

    +MaterialVariants()
    +getters()

}

class Order {
    -int orderId
    -double materialCost
    -double salesPrice
    -double carportWidth;
    -double carportLength;
    -double carportHeight;
    -int userId;
    -String status;
    -double shedWidth;
    -double shedLength;
    -String userEmail;

    +Order(-shed)
    +Order()
    +Order(+email)
    +getters()
    +setters()

}

class Part {
    -int order_id;
    -String useDescription;
    -int quantity;
    -double price;
    -int variantId;
    -double length;
    -int materialId;
    -String dimensions;
    -String unit;

    +Part()
    +getters()

}

class Role {
    -String role

    +Role()
    +getters
    +setters
    +Strin toString()

}

class Status {
    -String status

    +Status()
    +getters

}

class Type {
    -String type

    +Type()
    +getters
}

class Unit {
    -String unit

    +Unit()
    +getters

}

class User {
    -int id;
    -String email;
    -String password;
    -String name;
    -int zip;
    -String city;
    -String address;
    -String role;

    +user()
    +user()
    +user()
    +user()
    +getters
    +setters
    +bolean equals()
    +int hashcode
    +Strin toString()

}

class ItemListPopulator {
        -boolean postAdded
        -boolean roofAdded
        -double length
        -double width
        -double height
        -String postDescription
        -Materials roofs
        -Materials rafts
        -int numberOfRafts
        -int numberOfPosts
        -int numberOfRoofPlates
        -int numberOfRaisingPlates
        -List<MaterialVariants> raisingPlatesVariants
        -List<MaterialVariants> raftList
        -List<MaterialVariants> postsVariantsList
        -List<MaterialVariants> roofPlatesVariants

        +populate()
        +addRaisinPlates()
        +addRafts()


}

class PartsCalculator{
        -int numberOfPosts
        -double maxSpaceBetweenPost
        -double raftWidth
        -double spaceBetweenRafts
        -int numberOfRafts
        -double roofPlatesWidth
        -double roofPlatesLength
        -int numberOfRoofPlates
        -int numberOfPlatesForLength
        -int numberOfPlatesForWidth

        +calculateNumberOfPosts()
        +calculateNumberOfRafts()
        +calculateNumberOfRoofPlates()

}

User *-- Order
User *-- Role
Order *-- ItemList
Order *-- Status
ItemListPopulator *-- PartsCalculator
ItemList *-- LinkItemListMaterialVariants
LinkItemListMaterialVariants *-- MaterialVariants
MaterialVariants *-- Material
Material *-- Unit
Material *-- Type
ItemList *-- ItemListPopulator
Order *-- Part



@enduml